<resources>
    <string name="app_name">MADMeditationApp</string>
    <string name="logo_description">Logo in the form of a flower</string>
    <string name="login_button_text">Войти в аккаунт</string>
    <string name="Text_under_the_login_button">Еще нет аккаунта? Зарегистрируйтесь</string>
    <string name="onboarding_hello">ПРИВЕТ</string>
    <string name="onboarding_description">Наслаждайся отборочными.\nБудь внимателен.\nДелай хорошо.</string>
    <string name="registration_stub_text">Тут будет\nрегистрация</string>
    <string name="menu_stub_text">Тут будет меню</string>
    <string name="listen_stub_text">Тут будет\nпрослушивание</string>
    <string name="sign_in_text">Sign in</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="register_text">Register</string>
    <string name="profile_text">Профиль</string>
    <string name="Description_photo_with_a_fern">Photo with a fern</string>
    <string name="main_menu_bar_description">main_menu_bar</string>
    <string name="more_detailed_text">подробнее</string>
    <string name="under_the_user_greeting">Каким ты себя ощущаешь сегодня?</string>
    <string name="calm_text">Спокойным</string>
    <string name="block_description">Кратенькое описание\nблока с двумя строчками</string>
    <string name="user_greeting">Кратенькое описание\nблока с двумя строчками</string>
    <string name="user_experience">Ощущение пользователя</string>
    <string name="user_experience_icon">Иконка ощущения пользователя</string>
    <string name="menu_item">Пункт меню</string>
    <string name="information_block">Блок с информацией</string>
    <string name="picture_in_information_block">Картинка в блоке с информацией</string>
    <string name="focused_text">Сосредоточеным</string>
    <string name="block_header">Заголовок блока</string>
    <string name="excited_text">Взволнованным</string>
    <string name="relaxed_text">Расслабленным</string>
    <string name="hamburger_menu_icon">Hamburger menu icon</string>
    <string name="profile_menu_icon">Profile menu icon</string>
    <string name="delete_text">удалить</string>
    <string name="close_text">закрыть</string>
    <string name="open_photo_text">open_photo</string>
    <string name="_15_55">15:55</string>
    <string name="_11_11">11:11</string>
    <string name="user_name">Эмиль</string>
    <string name="_19_11">19:11</string>
    <string name="exit_button">exit</string>
    <string name="_11_00">11:00</string>
    <string name="plus_button">+</string>
    <string name="photo_in_profile">Фото в профиле</string>
    <string name="add_photo_in_profile">Добавить фото в профиле</string>
</resources>