<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green_background"
    tools:context=".profile.ProfileActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_menu_logo"
        android:layout_width="23dp"
        android:layout_height="18dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/hamburger"
        android:contentDescription="@string/hamburger_menu_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/profile_main_logo"
        android:layout_width="45.39dp"
        android:layout_height="49dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo_main"
        app:layout_constraintStart_toEndOf="@+id/profile_menu_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_exit_button"
        android:layout_width="23dp"
        android:layout_height="18dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/alegreya_sans_medium"
        android:text="@string/exit_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/profile_main_logo"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/profile_user_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/profile_menu_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_main_logo"
        app:srcCompat="@drawable/image_profile" />

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/alegreya_sans_medium"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_user_photo" />

    <ImageView
        android:id="@+id/second_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="26dp"
        android:contentDescription="@string/photo_in_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_photo"
        app:layout_constraintTop_toBottomOf="@+id/profile_username"
        app:srcCompat="@drawable/image_2" />

    <ImageView
        android:id="@+id/first_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/photo_in_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_username"
        app:srcCompat="@drawable/image_1" />

    <ImageView
        android:id="@+id/third_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/photo_in_profile"
        app:layout_constraintEnd_toEndOf="@+id/first_photo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/first_photo"
        app:layout_constraintTop_toBottomOf="@+id/first_photo"
        app:srcCompat="@drawable/image_3" />

    <ImageView
        android:id="@+id/fouth_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/photo_in_profile"
        app:layout_constraintEnd_toEndOf="@+id/second_photo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/second_photo"
        app:layout_constraintTop_toBottomOf="@+id/second_photo"
        app:srcCompat="@drawable/image_4" />

    <ImageView
        android:id="@+id/add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/add_photo_in_profile"
        app:layout_constraintEnd_toEndOf="@+id/third_photo"
        app:layout_constraintStart_toStartOf="@+id/third_photo"
        app:layout_constraintTop_toBottomOf="@+id/third_photo"
        app:srcCompat="@drawable/add_image_background" />

    <TextView
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sans_medium"
        android:text="@string/plus_button"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/add_photo"
        app:layout_constraintEnd_toEndOf="@+id/add_photo"
        app:layout_constraintStart_toStartOf="@+id/add_photo"
        app:layout_constraintTop_toTopOf="@+id/add_photo"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_menu_bar"
        android:layout_width="21.54dp"
        android:layout_height="20dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/home_off_bar"
        android:contentDescription="@string/menu_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_photo"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/listen_menu_bar"
        android:layout_width="21.54dp"
        android:layout_height="20dp"
        android:layout_marginStart="83dp"
        android:background="@drawable/listen_off_bar"
        android:contentDescription="@string/menu_item"
        app:layout_constraintStart_toEndOf="@+id/main_menu_bar"
        app:layout_constraintTop_toTopOf="@+id/main_menu_bar"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_menu_bar"
        android:layout_width="21.54dp"
        android:layout_height="20dp"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/profile_on_bar"
        android:contentDescription="@string/menu_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/listen_menu_bar"
        app:layout_constraintTop_toTopOf="@+id/listen_menu_bar"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/second_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/alegreya_sans_medium"
        android:text="@string/_15_55"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/second_photo"
        app:layout_constraintEnd_toEndOf="@+id/second_photo"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="@+id/second_photo"
        app:layout_constraintTop_toTopOf="@+id/second_photo"
        app:layout_constraintVertical_bias="0.725" />

    <TextView
        android:id="@+id/fouth_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/alegreya_sans_medium"
        android:text="@string/_11_11"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/fouth_photo"
        app:layout_constraintEnd_toEndOf="@+id/fouth_photo"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="@+id/fouth_photo"
        app:layout_constraintTop_toTopOf="@+id/fouth_photo"
        app:layout_constraintVertical_bias="0.681" />

    <TextView
        android:id="@+id/third_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/alegreya_sans_medium"
        android:text="@string/_19_11"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/third_photo"
        app:layout_constraintEnd_toEndOf="@+id/third_photo"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="@+id/third_photo"
        app:layout_constraintTop_toTopOf="@+id/third_photo"
        app:layout_constraintVertical_bias="0.791" />

    <TextView
        android:id="@+id/first_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/alegreya_sans_medium"
        android:text="@string/_11_00"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/first_photo"
        app:layout_constraintEnd_toEndOf="@+id/first_photo"
        app:layout_constraintStart_toStartOf="@+id/first_photo"
        app:layout_constraintTop_toTopOf="@+id/first_photo" />


</androidx.constraintlayout.widget.ConstraintLayout>