<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_forest"
    tools:context=".onboarding.OnBoardingActivity">

    <ImageView
        android:id="@+id/onboarding_logo"
        android:layout_width="191dp"
        android:layout_height="199dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="433dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_flower" />

    <TextView
        android:id="@+id/onboarding_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="121dp"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/onboarding_hello"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_logo" />

    <TextView
        android:id="@+id/onboarding_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="71dp"
        android:fontFamily="@font/alegreya_sans_medium"
        android:text="@string/onboarding_description"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_hello" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/onboarding_login_button"
        android:layout_width="321dp"
        android:layout_height="61dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/round_green_button"
        android:fontFamily="@font/alegreya_sans_medium"
        android:text="@string/login_button_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/onboarding_register_button"
        android:layout_width="305dp"
        android:layout_height="24dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="35dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/alegreya_sans"
        android:text="@string/Text_under_the_login_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_login_button"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>